# marathon-scraping

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  scraper.py  ui.py
src/: main.py  scraper.py  task.py  ui.py  worker.py
src/services/: remove_watermark.py  rq_service.py  scraper.py
