[project]
name = "marathon-scrapping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "lxml>=5.4.0",
    "patchright>=1.52.5",
    "playwright>=1.52.0",
    "playwright-stealth<2.0.0",
    "redis>=6.2.0",
    "requests>=2.32.4",
    "rq>=2.4.0",
    "setuptools<81",
]
